kubernetes-in-action/chapter05/kubia-svc-nodeport-onlylocal.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport-onlylocal
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: kubia
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30124
