kubernetes-in-action/chapter05/kubia-svc-publish-not-ready.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-all
spec:
  selector:
    app: kubia
  ports:
    - port: 80
      targetPort: 8080
  publishNotReadyEndpoints: true
