kubernetes-in-action/chapter05/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  selector:
    app: kubia
  ports:
    - port: 80
      targetPort: 8080
